# neighbour_api

./: .env  Makefile  README.md  pyproject.toml
api/: main.py  router.py
api/auth/: domain.py  models.py  repository.py  routes.py
api/base_app/: exc.py  filters.py  model.py
api/base_app/security/: auth_handler.py  dependecies.py
api/common/: __init__.py  page.py  user.py
api/database/: config.py  entity.py  repository.py
api/products/: domain.py  entity.py  models.py  repository.py  routes.py
api/register/: domain.py  models.py  routes.py
api/register/entities/: condominium.py  condominium_type.py  enums.py  user.py
api/register/repositories/: condominium.py  user.py
api/transactions/: __init__.py  domain.py  models.py  routes.py
api/transactions/entities/: loans.py  needs.py
api/transactions/repositories/: loans.py  needs.py
api/user/: domain.py  models.py  repository.py  routes.py
